Posting files without AuthKey

--- a/frontend-app/Dockerfile
+++ b/frontend-app/Dockerfile
@@ -28,7 +28,7 @@ RUN npm ci --include=dev
 COPY . .
 
 # Build application
-RUN npx next build --experimental-build-mode compile
+RUN npm run build
 
 # Remove development dependencies
 RUN npm prune --omit=dev
@@ -45,4 +45,4 @@ ENTRYPOINT [ "/app/docker-entrypoint.js" ]
 
 # Start the server by default, this can be overwritten at runtime
 EXPOSE 3000
-CMD [ "npm", "run", "start" ]
+CMD ["npx", "serve", "out", "-l", "3000"]
