--- a/frontend-app/package.json
+++ b/frontend-app/package.json
@@ -3,16 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
-    "start": "next start",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "serve out",
     "lint": "eslint"
   },
   "dependencies": {
     "axios": "^1.12.2",
     "next": "15.5.3",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "serve": "^14.2.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
