--- a/backend-api/package.json
+++ b/backend-api/package.json
@@ -2,7 +2,7 @@
   "name": "example_project",
   "version": "1.0.0",
   "description": "None",
-  "main": "tester.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
