--- a/frontend-app/fly.toml
+++ b/frontend-app/fly.toml
@@ -8,6 +8,7 @@ primary_region = 'bos'
 
 [build]
 
+
 [http_service]
   internal_port = 3000
   force_https = true
@@ -15,6 +16,9 @@ primary_region = 'bos'
   auto_start_machines = true
   min_machines_running = 0
   processes = ['app']
+
+[env]
+NEXT_PUBLIC_BACKEND_URL = "https://backend-api-summer-log-9036.fly.dev"
 
 [[vm]]
   memory = '1gb'
